--- a/package.json
+++ b/package.json
@@ -1,20 +1,48 @@
 {
-  "name": "@sensoq/source",
+  "name": "@sensoq/standards",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@sensoq/ts-config": "workspace:*"
+  },
   "devDependencies": {
     "@nx/js": "21.3.11",
+    "@nx/rollup": "21.3.11",
+    "@nx/vite": "21.3.11",
+    "@nx/web": "21.3.11",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/node": "18.16.9",
+    "@vitest/coverage-v8": "^3.0.5",
+    "@vitest/ui": "^3.0.0",
+    "jiti": "2.4.2",
     "nx": "21.3.11",
+    "rollup": "^4.14.0",
+    "swc-loader": "0.1.15",
     "tslib": "^2.3.0",
-    "typescript": "~5.8.2"
+    "typescript": "~5.8.2",
+    "verdaccio": "^6.0.5",
+    "vite": "^6.0.0",
+    "vitest": "^3.0.0"
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "nx": {
+    "includedScripts": [],
+    "targets": {
+      "local-registry": {
+        "executor": "@nx/js:verdaccio",
+        "options": {
+          "port": 4873,
+          "config": ".verdaccio/config.yml",
+          "storage": "tmp/local-registry/storage"
+        }
+      }
+    }
+  }
 }
