--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,21 +1,8 @@
 {
+  "extends": "./packages/ts-config/src/nx-workspace.json",
   "compilerOptions": {
-    "composite": true,
-    "declarationMap": true,
-    "emitDeclarationOnly": true,
-    "importHelpers": true,
-    "isolatedModules": true,
-    "lib": ["es2022"],
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
-    "noEmitOnError": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitOverride": true,
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "target": "es2022",
-    "customConditions": ["development"]
-  }
+    "baseUrl": "."
+  },
+  "include": ["packages/*/src/**/*.ts"],
+  "exclude": ["**/node_modules", "**/dist", "**/*.test.ts", "**/*.spec.ts"]
 }
